--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,10 @@
 
   --chart-2: oklch(0.6 0.118 184.704);
 
+  --color-income: hsl(142, 76%, 36%);
+
+  --color-expense: hsl(0, 84%, 60%);
+
   --chart-3: oklch(0.398 0.07 227.392);
 
   --chart-4: oklch(0.828 0.189 84.429);
@@ -181,6 +185,10 @@
   --chart-1: oklch(0.488 0.243 264.376);
 
   --chart-2: oklch(0.696 0.17 162.48);
+
+  --color-income: hsl(142, 76%, 36%);
+
+  --color-expense: hsl(0, 84%, 60%);
 
   --chart-3: oklch(0.769 0.188 70.08);
 
